# docs/swagger.yaml
@@ -14,6 +14,21 @@ definitions:
         example: password
         type: string
     type: object
+  dto.OrderInfoDTO:
+    properties:
+      accrual:
+        example: 500
+        type: number
+      order_number:
+        example: "49927398716"
+        type: string
+      status:
+        example: NEW
+        type: string
+      uploaded_at:
+        example: "2020-12-10T15:12:01+03:00"
+        type: string
+    type: object
   dto.UserLoginRequestDTO:
     properties:
       login:
@@ -61,6 +76,41 @@ paths:
       tags:
       - auth
   /api/user/orders:
+    get:
+      consumes:
+      - text/plain
+      description: Fetch list of users orders
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.OrderInfoDTO'
+            type: array
+        "204":
+          description: Accepted
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Fetch list of users orders
+      tags:
+      - order
     post:
       consumes:
       - text/plain
@@ -98,11 +148,11 @@ paths:
           schema:
             type: string
         "409":
-          description: invalid order
+          description: invalid order number
           schema:
             type: string
         "422":
-          description: invalid order
+          description: invalid order number
           schema:
             type: string
         "500":
