# internal/pgxstore/models_gen.go
@@ -7,9 +7,10 @@ package pgxstore
 import (
 	"database/sql/driver"
 	"fmt"
+	"time"
 
 	"github.com/google/uuid"
-	"github.com/jackc/pgx/v5/pgtype"
+	"github.com/shopspring/decimal"
 )
 
 type OrderStatusType string
@@ -138,28 +139,29 @@ func AllProcessStatusTypeValues() []ProcessStatusType {
 }
 
 type Order struct {
-	CreatedAt   pgtype.Timestamp `db:"created_at" json:"created_at"`
-	UpdatedAt   pgtype.Timestamp `db:"updated_at" json:"updated_at"`
-	DeletedAt   pgtype.Timestamp `db:"deleted_at" json:"deleted_at"`
-	OrderNumber string           `db:"order_number" json:"order_number"`
-	Status      OrderStatusType  `db:"status" json:"status"`
-	ID          uuid.UUID        `db:"id" json:"id"`
-	UserID      uuid.UUID        `db:"user_id" json:"user_id"`
+	ID          uuid.UUID       `db:"id" json:"id"`
+	UserID      uuid.UUID       `db:"user_id" json:"user_id"`
+	OrderNumber string          `db:"order_number" json:"order_number"`
+	Status      OrderStatusType `db:"status" json:"status"`
+	Accrual     decimal.Decimal `db:"accrual" json:"accrual"`
+	CreatedAt   time.Time       `db:"created_at" json:"created_at"`
+	UpdatedAt   *time.Time      `db:"updated_at" json:"updated_at"`
+	DeletedAt   *time.Time      `db:"deleted_at" json:"deleted_at"`
 }
 
 type OrdersToProcess struct {
-	CreatedAt     pgtype.Timestamp  `db:"created_at" json:"created_at"`
-	UpdatedAt     pgtype.Timestamp  `db:"updated_at" json:"updated_at"`
-	DeletedAt     pgtype.Timestamp  `db:"deleted_at" json:"deleted_at"`
-	ProcessStatus ProcessStatusType `db:"process_status" json:"process_status"`
 	OrderID       uuid.UUID         `db:"order_id" json:"order_id"`
+	ProcessStatus ProcessStatusType `db:"process_status" json:"process_status"`
+	CreatedAt     time.Time         `db:"created_at" json:"created_at"`
+	UpdatedAt     *time.Time        `db:"updated_at" json:"updated_at"`
+	DeletedAt     *time.Time        `db:"deleted_at" json:"deleted_at"`
 }
 
 type User struct {
-	CreatedAt    pgtype.Timestamp `db:"created_at" json:"created_at"`
-	UpdatedAt    pgtype.Timestamp `db:"updated_at" json:"updated_at"`
-	DeletedAt    pgtype.Timestamp `db:"deleted_at" json:"deleted_at"`
-	Login        string           `db:"login" json:"login"`
-	PasswordHash string           `db:"password_hash" json:"password_hash"`
-	ID           uuid.UUID        `db:"id" json:"id"`
+	ID           uuid.UUID  `db:"id" json:"id"`
+	Login        string     `db:"login" json:"login"`
+	PasswordHash string     `db:"password_hash" json:"password_hash"`
+	CreatedAt    time.Time  `db:"created_at" json:"created_at"`
+	UpdatedAt    *time.Time `db:"updated_at" json:"updated_at"`
+	DeletedAt    *time.Time `db:"deleted_at" json:"deleted_at"`
 }
